--- a/index.html
+++ b/index.html
@@ -2,16 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://i.ibb.co/ZzPfwrxP/logo-final-png.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sponsor Studio</title>
-    <meta name="description" content="Connect with the right partners for your next event. Whether you're a brand looking to sponsor or an organizer seeking sponsors, we've got you covered." />
+    <title>Sponsor Studio: Connect Brands & Event Organizers</title>
+    <meta name="description" content="Sponsor Studio connects brands with event organizers for seamless sponsorships. Find or become a sponsor today!" />
+    <meta name="keywords" content="sponsor events, event sponsorship, brand partnerships, event organizers, sponsorship platform" />
+    <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#2B4B9B" />
+    <link rel="canonical" href="https://www.sponsorstudio.com" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Sponsor Studio" />
-    <link rel="apple-touch-icon" href="https://i.ibb.co/ZzPfwrxP/logo-final-png.png" />
+    <link rel="preload" href="/src/main.tsx" as="script" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Sponsor Studio: Connect Brands & Event Organizers" />
+    <meta property="og:description" content="Join Sponsor Studio to connect brands with event organizers for impactful sponsorships." />
+    <!-- <meta property="og:image" content="/apple-touch-icon.png" /> -->
+    <meta property="og:url" content="https://www.sponsorstudio.com" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sponsor Studio: Connect Brands & Event Organizers" />
+    <meta name="twitter:description" content="Join Sponsor Studio to connect brands with event organizers for impactful sponsorships." />
+    <meta name="twitter:image" content="/apple-touch-icon.png" />
+    <!-- Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Sponsor Studio",
+      "url": "https://www.sponsorstudio.com",
+      "logo": "/apple-touch-icon.png",
+      "description": "Sponsor Studio connects brands with event organizers for seamless sponsorship opportunities.",
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
